--- a/index.html
+++ b/index.html
@@ -1,158 +1,185 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/colorthief@2.3.2/dist/color-thief.umd.js"></script>
-  <style>
-    body {
-      margin: 15px;
-      background: transparent;
-    }
+<meta charset="UTF-8">
 
-    /* 1️⃣ 极简样式：无边框、无阴影 */
-    .aplayer {
-      border: none !important;
-      box-shadow: none !important;
-      background: #fff;
-      border-radius: 0 !important;
-      --zinnia-theme: #e9e9e9;
-    }
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
+<script src="https://cdn.jsdelivr.net/npm/colorthief@2.3.2/dist/color-thief.umd.js"></script>
 
-    .aplayer .aplayer-info,
-    .aplayer .aplayer-list,
-    .aplayer .aplayer-list ol li {
-      border: none !important;
-    }
+<style>
+body {
+  margin: 15px;
+  background: transparent;
+}
 
-    /* 2️⃣ 列表尺寸：精准 3 首歌高度 (26px * 3 = 78px) */
-    .aplayer .aplayer-list {
-      max-height: 78px !important;
-      overflow: hidden !important;
-    }
+/* 极简 */
+.aplayer {
+  border: none !important;
+  box-shadow: none !important;
+  background: #fff;
+  border-radius: 0 !important;
+  --zinnia-theme: #e9e99;
+}
 
-    .aplayer .aplayer-list ol {
-      max-height: 78px !important;
-      overflow-y: auto !important;
-      margin: 0 !important;
-      padding: 0 !important;
-      scroll-behavior: smooth; 
-    }
+.aplayer .aplayer-info,
+.aplayer .aplayer-list,
+.aplayer .aplayer-list ol li {
+  border: none !important;
+}
 
-    .aplayer .aplayer-list ol::-webkit-scrollbar {
-      display: none !important;
-    }
+/* 固定高度 */
+.aplayer .aplayer-list {
+  max-height: 78px !important;
+  overflow: hidden !important;
+}
 
-    /* 3️⃣ 列表行样式 (26px) */
-    .aplayer .aplayer-list ol li {
-      background-image: none !important;
-      height: 26px !important;   
-      line-height: 26px !important;
-      padding: 0 15px !important;
-      font-size: 12px !important;
-      display: flex !important; 
-      align-items: center !important;
-    }
+.aplayer .aplayer-list ol {
+  max-height: 78px !important;
+  overflow-y: auto !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  scroll-behavior: auto !important;
+}
 
-    /* 4️⃣ 颜色统一：全部使用 #333 */
-    .aplayer .aplayer-list ol li .aplayer-list-title {
-      color: #333 !important; 
-      font-weight: 400 !important;
-      flex-grow: 1; 
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+/* 行高 */
+.aplayer .aplayer-list ol li {
+  height: 26px !important;
+  line-height: 26px !important;
+  padding: 0 15px !important;
+  font-size: 12px !important;
 
-    .aplayer .aplayer-list ol li .aplayer-list-author {
-      color: #333 !important; 
-      font-size: 11px !important;
-      margin-left: 10px;
-    }
+  display: flex !important;
+  align-items: center !important;
+}
 
-    .aplayer .aplayer-list ol li.aplayer-list-light {
-      background: #f4f4f4 !important;
-    }
+.aplayer .aplayer-list-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
-    /* 5️⃣ 小竖条：仅高亮行显示 */
-    .aplayer .aplayer-list ol li .aplayer-list-cur {
-      display: none !important; 
-    }
+/* 高亮 */
+.aplayer-list-light {
+  background: #f4f4f4 !important;
+}
 
-    .aplayer .aplayer-list ol li.aplayer-list-light .aplayer-list-cur {
-      display: block !important; 
-      width: 2px !important;
-      height: 16px !important; 
-      top: 5px !important;
-      background: var(--zinnia-theme) !important;
-    }
-  </style>
+/* 小竖条 */
+.aplayer-list-cur {
+  display: none !important;
+}
+
+.aplayer-list-light .aplayer-list-cur {
+  display: block !important;
+  width: 2px !important;
+  height: 16px !important;
+  background: var(--zinnia-theme) !important;
+}
+</style>
 </head>
 
 <body>
-  <div id="aplayer"></div>
-  <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
 
-  <script>
-    const audioList = [
-      { name: 'Her Silence', artist: '何真真', url: 'music/何真真 - Her Silence.mp3', cover: 'cover/何真真 - Her Silence.jpg' },
-      { name: 'Hurricanes', artist: 'Dido', url: 'music/Dido - Hurricanes.mp3', cover: 'cover/Dido - Hurricanes.jpg' },
-      { name: 'Everytime you kissed me', artist: 'FictionJunction', url: 'music/FictionJunction - Everytime you kissed me.mp3', cover: 'cover/FictionJunction - Everytime you kissed me.jpg' },
-      { name: '沙尘的彼方', artist: 'FictionJunction', url: 'music/FictionJunction - 沙尘的彼方.mp3', cover: 'cover/FictionJunction - 沙尘的彼方.jpg' },
-      { name: 'My long forgotten cloistered sleep', artist: 'FictionJunction', url: 'music/FictionJunction - My long forgotten cloistered sleep.mp3', cover: 'cover/FictionJunction - My long forgotten cloistered sleep.jpg' },
-      { name: '花守之丘', artist: 'FictionJunction', url: 'music/FictionJunction - 花守之丘.mp3', cover: 'cover/FictionJunction - 花守之丘.jpg' },
-      { name: 'Rewrite The Stars', artist: 'Zendaya', url: 'music/Zendaya - Rewrite The Stars.mp3', cover: 'cover/Zendaya - Rewrite The Stars.jpg' }
-    ];
+<div id="aplayer"></div>
 
-    const ap = new APlayer({
-      container: document.getElementById('aplayer'),
-      listFolded: false,
-      listMaxHeight: '78px', 
-      audio: audioList,
-      theme: '#e9e9e9'
-    });
+<script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
 
-    const colorThief = new ColorThief();
+<script>
 
-    // ✨ 变色龙核心函数
-    function chameleon() {
-      const index = ap.list.index;
-      const audio = audioList[index];
-      if (!audio || !audio.cover) return;
+const audioList = [
+  {
+    name: 'Her Silence',
+    artist: '何真真',
+    url: 'music/何真真 - Her Silence.mp3',
+    cover: 'cover/何真真 - Her Silence.jpg'
+  },
+  {
+    name: 'Hurricanes',
+    artist: 'Dido',
+    url: 'music/Dido - Hurricanes.mp3',
+    cover: 'cover/Dido - Hurricanes.jpg'
+  },
+  {
+    name: 'Everytime you kissed me',
+    artist: 'FictionJunction',
+    url: 'music/FictionJunction - Everytime you kissed me.mp3',
+    cover: 'cover/FictionJunction - Everytime you kissed me.jpg'
+  },
+  {
+    name: '沙尘的彼方',
+    artist: 'FictionJunction',
+    url: 'music/FictionJunction - 沙尘的彼方.mp3',
+    cover: 'cover/FictionJunction - 沙尘的彼方.jpg'
+  }
+];
 
-      const img = new Image();
-      img.crossOrigin = 'Anonymous';
-      img.onload = function() {
-        try {
-          const color = colorThief.getColor(img);
-          const rgb = `rgb(${color[0]}, ${color[1]}, ${color[2]})`;
-          ap.theme(rgb, index); // 更新 APlayer 主题色
-          ap.container.style.setProperty('--zinnia-theme', rgb); // 更新 CSS 变量（小竖条）
-        } catch (e) {}
-      };
-      img.src = audio.cover;
-    }
+const ap = new APlayer({
+  container: document.getElementById('aplayer'),
+  listFolded: false,
+  listMaxHeight: 78,
+  audio: audioList,
+  theme: '#e9e9e9'
+});
 
-    // ✨ 滚动修正函数
-    function scrollFix() {
-      const container = document.querySelector('.aplayer-list ol');
-      const active = document.querySelector('.aplayer-list-light');
-      if (container && active) {
-        // 使用最原生的方法将当前曲目滚动到视野内，不再强求“对齐”
-        active.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
-      }
-    }
+const colorThief = new ColorThief();
 
-    // 监听事件：切换歌曲时触发变色和滚动
-    ap.on('listswitch', () => {
-      chameleon();
-      setTimeout(scrollFix, 150); // 给一点延迟，等 DOM 渲染完再滚
-    });
+/* 等封面加载完再取色 */
+function updateTheme() {
 
-    // 页面初次加载
-    window.addEventListener('load', () => {
-      setTimeout(chameleon, 300);
-    });
-  </script>
+  const index = ap.list.index;
+  const cover = audioList[index]?.cover;
+
+  if (!cover) return;
+
+  const img = new Image();
+  img.crossOrigin = 'anonymous';
+
+  img.onload = () => {
+
+    try {
+      const color = colorThief.getColor(img);
+      const rgb = `rgb(${color[0]},${color[1]},${color[2]})`;
+
+      ap.theme(rgb, index);
+      ap.container.style.setProperty('--zinnia-theme', rgb);
+
+    } catch(e) {}
+  };
+
+  img.src = cover;
+}
+
+
+/* 用官方方法滚动 */
+function fixScroll() {
+
+  ap.list.switch(ap.list.index);
+
+}
+
+
+/* 切歌完成后再执行 */
+ap.on('play', () => {
+
+  updateTheme();
+
+  setTimeout(fixScroll, 80);
+
+});
+
+
+/* 初始化 */
+window.onload = () => {
+
+  setTimeout(() => {
+
+    updateTheme();
+    fixScroll();
+
+  }, 400);
+
+};
+
+</script>
+
 </body>
 </html>
